exports[`getId filters results 1`] = `
Array [
  Object {
    "countries": Array [],
    "id": 1,
    "title": "foo",
    "year": 2016,
  },
]
`;

exports[`getId filters results 2`] = `
Array [
  Object {
    "countries": Array [],
    "id": 1,
    "title": "Звёздные войны",
    "year": 2015,
  },
  Object {
    "countries": Array [],
    "id": 2,
    "title": "Звездные войны",
    "year": 2016,
  },
]
`;

exports[`getId filters results 3`] = `
Array [
  Object {
    "countries": Array [],
    "id": 2,
    "title": "foo",
    "year": 2016,
  },
  Object {
    "countries": Array [],
    "id": 4,
    "title": "foo",
    "year": 2016,
  },
]
`;

exports[`getId filters results 4`] = `
Array [
  Object {
    "countries": Array [
      "США",
      "Россия",
      "Германия",
    ],
    "id": 2,
    "title": "foo",
    "year": 2016,
  },
  Object {
    "countries": Array [
      "США",
      "Россия",
    ],
    "id": 4,
    "title": "foo",
    "year": 2016,
  },
]
`;

exports[`getId finds best movie id for a given query 1`] = `714888`;

exports[`getId finds best tv show id for a given query 1`] = `464963`;

exports[`getId scrapes movie search results 1`] = `
Array [
  Object {
    "countries": Array [
      "США",
    ],
    "id": 714888,
    "title": "Звёздные войны: Пробуждение силы",
    "year": 2015,
  },
]
`;

exports[`getId scrapes tv show search results 1`] = `
Array [
  Object {
    "countries": Array [
      "США",
      "Великобритания",
    ],
    "id": 464963,
    "title": "Игра престолов",
    "year": 2011,
  },
]
`;
